ui-tests/fail-1.65/not-render.stderr
error[E0277]: the trait bound `NotRender: RenderAttributeValue` is not satisfied
 --> fail-1.65/not-render.rs:6:26
  |
6 |         html["attr-user"=name] {
  |                          ^^^^ the trait `RenderAttributeValue` is not implemented for `NotRender`
  |
  = help: the following other types implement trait `RenderAttributeValue`:
            &'a T
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
            (A, B, C, D, E, F, G, H)
          and $N others
  = note: required for `&NotRender` to implement `RenderAttributeValue`

error[E0277]: the trait bound `NotRender: Render` is not satisfied
 --> fail-1.65/not-render.rs:8:36
  |
8 |                 strong { "Hello " @name "!" }
  |                                    ^^^^ the trait `Render` is not implemented for `NotRender`
  |
  = help: the following other types implement trait `Render`:
            &'a T
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
            (A, B, C, D, E, F, G, H)
          and $N others
  = note: required for `&NotRender` to implement `Render`
